--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,19 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: true
+  ios: true
+  web: true
+  windows: true
+  linux: true
+  macos: true
+  image_path: "imagens/icon.png"
 
 flutter:
   uses-material-design: true
+  assets:
+    - imagens/fotoperfil.png
+    - imagens/fundo.jpg
